fix: variable name

--- a/mini-fc80s/miniprogram/app.json
+++ b/mini-fc80s/miniprogram/app.json
@@ -31,7 +31,7 @@
       },
       {
         "pagePath": "pages/activity/activity",
-        "text": "test",
+        "text": "activity",
         "iconPath": "images/rank.png",
         "selectedIconPath": "images/rank_selected.png"
       }
